2005-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/project.py (build_tree_view):
	  Enable search for number column in list.
	  
	* menubar.xml:
	  Removed jump_to_subtitle item and all references to it.
	  
	* gui/delegates/guibuilder.py (_build_ui_manager):
	  Changed shortcut keys due to freeing Ctrl+F for searching. 

2005-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New subtitles can now be inserted when none exist.

2005-08-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Edit menu bug-fixed.
	
	* lib/delegates/editor.py (set_text):
	  Convert value to unicode.
	
	* gui/cellrend/time.py (RE_TIME):
	  lib/timing/calc.py (seconds_to_time):
	  Do not allow values greater than 59 for minutes and seconds.

2005-08-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* View menu bug-fixed.

2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Format, Search and Help menus bug-fixed.

2005-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Preferences dialog works.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* "Jump To Subtitle" dialog is far cooler now, and it works.
	
	* New supported format: MPL2.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* TreeView model is now detached during heavy data reloading. Speed
	  increase almost 30 %. Insignificant freeze/thaw methods removed.

2005-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Major code clean-up done.
	
	* Code uses more constants now.
	
	* List is no longer sortable.
	
	* Preferences dialog exists, but is not yet functional.
	
	* Huge amounts of new bugs.

2005-08-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Edit menu items are now functional, although perhaps buggy.

2005-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* New Help menu items are now functional.

2005-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* Major code clean-up done.
	
	* Lots of modules and functions renamed.

	* paths.py file is no longer written when running from source.
	
	* Changing format in save dialog now changes extension as well.
